--- a/html/Aula.html
+++ b/html/Aula.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="file:///C:/Users/Aluno/Downloads/RPG_40_a_pink_B_logo_0.jpg">
     <link rel="stylesheet" type="text/css" href="aula.css">
 
-    <title>Acervo Barbie</title>
+    <title>Enciclopédia Barbie</title>
 
 </head>
 <body>
